2010-03-24  Miguel de Dios  <miguel.dedios@artica.es>

	* include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/map_builder.php,
	godmode/reporting/visual_console_builder.editor.js: worked about the new
	visual console builder editor, now it is developing, don't afray.
	
	* godmode/reporting/visual_console_builder.constans.php: added the file that
	it has the constans. 

2010-03-24  Miguel de Dios  <miguel.dedios@artica.es>

	* include/config_process.php,
	godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/visual_console_builder.editor.js: worked about the new
	visual console builder editor, now it is developing, don't afray.
	
	* include/javascript/jquery.colorpicker.js: we used the old versión, and
	patch with self code for z-index to upper position. 

2010-03-24  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.preview.php,
	godmode/reporting/visual_console_builder.php,
	godmode/reporting/visual_console_builder.editor.php,
	godmode/reporting/visual_console_builder.editor.js: worked about the new
	visual console builder editor, now it is developing, don't afray.

2010-03-24  Junichi Satoh  <junichi@rworks.jp>

	* operation/snmpconsole/snmp_view.php: To follow timestamp setting,
	changed the function to use, from human_time_comparation() to
	print_timestamp(). 

2010-03-23  Miguel de Dios  <miguel.dedios@artica.es>

	* include/javascript/jquery.ui.resizable.js: add library of jQuery.ui for
	resizable elements.
	
	* include/functions_visual_map.php
	
	*include/ajax, include/ajax/visual_console_builder.ajax.php: add the
	file for ajax request from visual console builder editor.
	
	* include/config_process.php: change $build_version.
	
	* include/functions.php: in function "safe_url_extraclean" fix to pages
	with '.' character.
	