@@ -15,4 +15,6 @@
 //constants
 define('STATIC_GRAPH', 0);
 define('PERCENTILE_BAR', 3);
+define('MODULE_GRAPH', 1);
+define('SIMPLE_VALUE', 2);
 ?>
